2008-03-24  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* src/Makefile.am, build/gconf-schema-rules, build/build.mk, autogen.sh,
	  alarm.mdp: Improve build system.
	* src/Alarm.cs, src/VolumeFade.cs: Clean up logs.
	* src/AlarmClockService.cs, src/AlarmMenu.xml, src/ConfigurationDialog.cs,
	  src/ConfigurationWidget.cs: Convert the configuration stuff to a dialog,
	  and add it to the menu.

2008-03-24  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* src/ConfigurationWidget.cs, src/AlarmPlugin.cs, src/Alarm.cs,
	  src/SleepTimerConfigDialog.cs, src/GConfSchemas.cs,
	  src/AlarmConfigDialog.cs, src/Makefile.am,
	  src/Banshee.AlarmClock.addin.xml, src/VolumeFade.cs,
	  src/AlarmClockService.cs, build/gconf-schema-rules, configure.ac,
	  alarm.mdp: Port to Mono.Addins and the new banshee codebase.

2008-03-21  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	Version 0.3.2 released. Works only with banshee 0.13.2 and below. 

2008-03-21  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* src/AlarmPlugin.cs, src/Alarm.cs, src/AlarmConfigDialog.cs: Fix alarm time
	  reset.

2008-03-21  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* src/Alarm.cs: Do not crash when the Alarm thread is interrupted.
	* configure.ac: Update to version 0.3.2

2008-01-19  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	Version 0.3.1 released.

	* configure.ac: Bump version to 0.3.1.

2008-01-19  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* build/gconf-schema-rules: Display an error when gconf-schema-extractor is
	  not found.

2007-08-04  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* build/gconf-schema-rules, configure.ac: Fix build errors related to
	  gconf stuff. Thanks to Scott Henson for the report.

2007-08-04  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	0.3 Released

	* NEWS: Removed obsolete info, redirect to ChangeLog.
	* TODO: One item done, one item added.

2007-08-04  Bertrand Lorentz <bertrand.lorentz@gmail.com> 
